Archive2/0f/62be7883e29178/output
main.cpp:4:11: error: '::main' must return 'int'
 void main()
           ^
